--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -115,7 +115,7 @@ html, body{
     margin: 10px;
     background-image: url("icones/iconizer-bxs-home.svg");
     background-repeat: no-repeat;
-    background-color: black;
+    background-color: #121212;
     border-style: hidden;
     background-size: contain;
 
