--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -33,10 +33,19 @@ html, body{
 
 
 }
+
 .MainPage{
     display: flex;
     flex-direction: column;
 
+}
+.page_header{
+    font-size: 400%;
+    color: yellow;
+    font-weight: bold;
+    text-decoration: underline;
+    font-family: Arial, serif;
+    text-align: center;
 }
 
 .headersTop{
