--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -155,6 +155,7 @@ html, body{
     background-color: #1E1E1E;
     left: -250px;
     width: 250px;
+    z-index: 1050;
     height: 100%;
     transition: transform 1s ease-in-out;
 }
