--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -174,6 +174,21 @@ h1.styleForHeader
 
 
 
+.img-compress {
+        object-fit: contain;
+        height: 150px;
+        width: 100%;
+    }
+
+
+.card {
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
 
 
 .shop-items{
