added a searchbar, that you can search for products, with java script we will work on that.

--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -33,6 +33,11 @@ html, body{
 
 
 }
+.top-search-products{
+    display: flex;
+    flex-direction: column;
+
+}
 .fixed-top-bar{
     position: fixed;
     display: flex;
