styled the nutrition text more

--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -119,6 +119,10 @@ body {
     margin-bottom: 10px;
 }
 
+.section strong {
+    color: yellow;
+}
+
 footer.footer {
     text-align: center;
     font-size: 16px;
