--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -46,13 +46,14 @@ html, body{
     background-color: #121212;
     z-index: 999;
     width: 100%;
+    border-bottom: 5px solid yellow;
 }
 .MainPage{
     display: flex;
     flex-direction: column;
 
 }
-.page_header{
+.page-header{
     font-size: 400%;
     color: yellow;
     font-weight: bold;
@@ -317,3 +318,4 @@ a.text-in-sidebar:hover
     background-position: right bottom; /* Bewegt den Farbverlauf nach links */
     color: black; /* Ändert die Textfarbe auf Schwarz */
 }
+
