--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -28,7 +28,7 @@ body {
 }
 
 .logo {
-    height: 40px; /* Adjust size as needed */
+    height: 40px;
     width: auto;
 }
 
@@ -36,6 +36,12 @@ body {
     font-size: 24px;
     color: yellow;
     cursor: pointer;
+}
+
+.menu-button-wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: 1em;
 }
 
 .title {
