changed the homebutton for a menu buttton

--- a/fitness-and-health-website/stylesheet-about-us.css
+++ b/fitness-and-health-website/stylesheet-about-us.css
@@ -134,7 +134,7 @@ td.heightAndWidthForTdInAboutUs
     width: 20%;
     height: 20%;
     margin: 10px;
-    background-image: url("icones/iconizer-bxs-home.svg");
+    background-image: url("icones/menu.png");
     background-repeat: no-repeat;
     background-color: #121212;
     border-style: hidden;
