minor changed in the topbar in nutrition and payment

--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -25,15 +25,16 @@ body {
 .logo-wrapper {
     display: flex;
     align-items: center;
+    margin-right: 1.5em;
 }
 
 .logo {
-    height: 40px;
-    width: auto;
+    height: 3.5em;
+    width: 3.5em;
 }
 
 .menu-button {
-    font-size: 24px;
+    font-size: 2em;
     color: yellow;
     cursor: pointer;
 }
