--- a/fitness-and-health-website/shopping-basket.css
+++ b/fitness-and-health-website/shopping-basket.css
@@ -109,16 +109,16 @@ h1.header-in-shopping-basket
     }
 }
 
-
 .top-bar {
-
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: black;
     border-bottom: 3px solid yellow;
-
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Adjust content to both ends */
     padding: 10px 20px;
     z-index: 1000;
 }
@@ -126,19 +126,35 @@ h1.header-in-shopping-basket
 .logo-wrapper {
     display: flex;
     align-items: center;
+    margin-right: 1.5em;
 }
 
 .logo {
-    height: 40px;
-    width: auto;
+    height: 3.5em;
+    width: 3.5em;
 }
 
 .menu-button {
-    font-size: 2em;
+    font-size: 2.5em;
     color: yellow;
     cursor: pointer;
 }
 
+.menu-button-wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: 1em;
+}
+
+.title {
+    flex: 1;
+    text-align: center;
+    font-size: 28px;
+    color: yellow;
+    margin: 0;
+}
+
+/* Sidebar */
 .sidebar {
     position: fixed;
     top: 0;
@@ -152,41 +168,23 @@ h1.header-in-shopping-basket
 }
 
 
-.logo-wrapper {
-    display: flex;
-    align-items: center;
-    margin-right: 1.5em;
-}
-
-.logo {
-    height: 3.5em;
-    width: 3.5em;
-}
-
-.title {
-    flex: 1;
-    text-align: center;
-    font-size: 28px;
-    color: yellow;
-    margin: 0;
-}
-
-.menu-button-wrapper {
-    display: flex;
-    align-items: center;
-    margin-left: 1em;
-}
-
 .menu-button:hover + .sidebar,
 .sidebar:hover {
     transform: translateX(250px);
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    padding-top: 60px;
 }
 
 .li-items-in-sidebar {
     margin-left: 5%;
 }
 
-.text-in-sidebar{
+.text-in-sidebar {
     color: white;
     font-size: large;
     font-family: Arial, serif;
