--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -3,6 +3,7 @@ html, body{
     margin: 0;
     padding: 0;
     overflow-x: hidden !important;
+    overflow-y: auto;
     background-color: #121212;
 }
 .index{
